blog/k8s/client-deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            regex: /?(.*)
      route:
        - destination:
            host: client-service
            port:
              number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: life4honor/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
