blog/k8s/comment-deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comments-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            regex: /posts/?(.*)/comments
      route:
        - destination:
            host: comments-service
            port:
              number: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: life4honor/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
