blog/k8s/posts-deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: posts-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            exact: /posts/create
      route:
        - destination:
            host: posts-service
            port:
              number: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: life4honor/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
